Tweak add to cart button styles to prevent overlaps

--- a/.dev/sass/compat/woocommerce.scss
+++ b/.dev/sass/compat/woocommerce.scss
@@ -202,6 +202,12 @@ body.single-product {
 	padding: 10px;
 }
 
+.woocommerce ul.products li.product a.add_to_cart_button {
+	width: 100%;
+	font-size: 16px;
+	text-align: center;
+}
+
 @media #{$small-only} {
 
 	.primer-wc-cart-menu {
