--- a/style.css
+++ b/style.css
@@ -1936,6 +1936,11 @@ body.single-product .quantity .input-text {
 .woocommerce-page table.cart td.actions .input-text {
   padding: 10px; }
 
+.woocommerce ul.products li.product a.add_to_cart_button {
+  width: 100%;
+  font-size: 16px;
+  text-align: center; }
+
 @media only screen and (max-width: 40.063em) {
   .primer-wc-cart-menu .primer-wc-cart-sub-menu .widget_shopping_cart {
     width: 100%; } }
